<resources>
    <string name="app_name">Aspire Onboarding</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bullet_task">• %1$s</string>
    <string name="lbl_day_routine">We help you stay consistent and\nstack small wins everyday!</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_skip_login">Skip to login</string>
    <string name="lbl_joined">25+ have joined</string>
    <string name="lbl_growth">Personalized programs to make your\nprofessional and personal growth a routine!</string>
    <string name="aspire_logo">Aspire Logo</string>
    <string name="lbl_intro_text">Get ready to evolve into the best\nversion of yourself!!</string>
    <string name="lbl_earn">Celebrate your consistency with gifts\nyou love with the rewards you earn!</string>
    <string name="lbl_coins">💰 100 Coins</string>
    <string name="lbl_stars">⭐ 100 Stars</string>
    <string name="lbl_avatar">avatar</string>
    <string name="lbl_task">Tasks</string>
</resources>