<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="false">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/lbl_earn"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <FrameLayout
        android:id="@+id/rewardContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp">

        <androidx.cardview.widget.CardView
            android:layout_width="260dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:elevation="6dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/coinsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_coins"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/starsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_stars"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/avatarImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="0dp"
            android:background="@drawable/avatar_border"
            android:contentDescription="@string/lbl_avatar"
            android:elevation="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar3" />
    </FrameLayout>

</RelativeLayout>
